--- a/esbd3_part1/sink/Dockerfile
+++ b/esbd3_part1/sink/Dockerfile
@@ -1,18 +1,8 @@
 FROM python:3.8-slim-buster
-
-
-
 WORKDIR /app
-
-COPY ./requirements.txt /app
-
+COPY ./ /app
 RUN pip install --upgrade pip && \
     pip install -r requirements.txt
 
 EXPOSE 5556
-
-COPY ./src /app
-
-
-
 ENTRYPOINT [ "python", "-u", "sink.py"]
