--- a/esbd3_part1/ventilator/Dockerfile
+++ b/esbd3_part1/ventilator/Dockerfile
@@ -1,14 +1,8 @@
 FROM python:3.8-slim-buster
-
-
 WORKDIR /app
-
-COPY ./requirements.txt /app
-
+COPY ./ /app
 RUN pip install --upgrade pip && \
     pip install -r requirements.txt
-
-COPY ./src /app
 
 EXPOSE 5555
 ENTRYPOINT [ "python", "-u", "ventilator.py" ]
