--- a/esbd3_part1/workers/Dockerfile
+++ b/esbd3_part1/workers/Dockerfile
@@ -1,17 +1,7 @@
 FROM python:3.8-slim-buster
-
-
-
 WORKDIR /app
-
-COPY ./requirements.txt /app
-
+COPY ./ /app
 RUN pip install --upgrade pip && \
     pip install -r requirements.txt
-
-
-COPY ./src /app
-
-
 
 ENTRYPOINT [ "python", "-u", "worker.py"]
